System.getProperty( " os.name " ) returns " Windows NT (unknown) " on Windows 8.1

XMLWordPrintable

    • b103
    • windows_8
    • Not verified

        FULL PRODUCT VERSION :


        ADDITIONAL OS VERSION INFORMATION :
        Windows 8.1
        Windows Server 2012 R2

        A DESCRIPTION OF THE PROBLEM :
        System.getProperty( " os.name " ) returns " Windows NT (unknown) " on Windows 8.1 and Windows Server 2012 R2

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        Following code should return valid OS name for Windows 8.1

        public class HelloWorld {
             public static void main(String args[]) {
                System.out.println(System.getProperty( " os.name " ));
             }
        }

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        Valid OS name
        ACTUAL -
         " Windows NT (unknown) "

        REPRODUCIBILITY :
        This bug can be reproduced always.

        ---------- BEGIN SOURCE ----------
        public class HelloWorld {
             public static void main(String args[]) {
                System.out.println(System.getProperty( " os.name " ));
             }
        }
        ---------- END SOURCE ----------

              Assignee:
              Alexey Utkin (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

                Created:
                Updated:
                Resolved: